[timeline] vbug fixed: vertical lines no longer collapsing automatically, styling bug fixes to timeline

--- a/src/css/beat_block.scss
+++ b/src/css/beat_block.scss
@@ -217,6 +217,7 @@ $medium_width: 80px;
   float: left;
   margin-right: 3px;
   margin-left: 2px;
+  margin-top:-15px;
   visibility: hidden;
   button.btn-block {
     margin-top: 1px;
@@ -240,9 +241,9 @@ $medium_width: 80px;
   transition: all 0.4s $cubic;
   font-size: 16px;
   cursor: pointer;
-  margin:-25px 0 0 0;
+  margin:-6px 0 0 0;
   &:first-child {
-    margin: -25px 0px 2px 80px;
+    margin: -10px -30px 0px 80px;
   }
   svg {
     position: absolute;
